Added new content

--- a/450-test/index.html
+++ b/450-test/index.html
@@ -5,13 +5,13 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 ---
 
 <h1 class="pink">Celebrating 450 years of community on the Hill</h1>
-<h1 class="turquoise">30 April noon – 6pm</h1>
+<h1 class="turquoise">30 April Noon – 6pm</h1>
 
 <p>Residents and friends from around the Hill are invited to join in a day of celebration to mark the 450th anniversary of Harrow School. There’s something for everyone and new events are being added to all the time. This information will be updated regularly up until and including Saturday 30 April.</p>
 
 <p><strong>Last updated: {{ page.date | date: "%A %-d %B" }}</strong></p>
 
-<h1 class="purple">Food</h1>
+<h1 class="purple">Food Noon to 6pm</h1>
 
 <details>
 <summary>Food Market</summary>
@@ -55,7 +55,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <p>📍 Opposite Druries</p>
 </details>
 
-<h1 class="orange">Events</h1>
+<h1 class="orange">Events 2pm – 6pm</h1>
 
 <p>Tap each item for more information.</p>
 
@@ -147,7 +147,8 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 
 
 <details>
-<summary>Harrow Gospel Choir</summary>
+<summary>Harrow Community Gospel Choir</summary>
+<p><a href="https://harrowcommunitygospelchoir.com">Harrow Community Gospel Choir</a> is a performing choir singing a mixture of contemporary gospel songs and spirituals. The choir is directed by CeCelia Wickham-Anderson, a member of the internationally acclaimed acapella singing group <a href="http://blackvoices.co.uk">Black Voices</a></p>
 <p>🕓 3.30pm, 5.15pm</p>
 <p>📍 Bill Yard</p>
 </details>
@@ -158,14 +159,6 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <p>Please register for this walk, for which there is no charge, with Robert Lemon  07836 638620 <a href="mailto:robertlemon@live.co.uk">robertlemon@live.co.uk</a></p>
 <p>🕓 3pm – 4pm</p>
 <p>📍 St Mary's Church</p>
-</details>
-
-<details>
-<summary>Harrow Indie Choir</summary>
-<p>Harrow's very own Indie Choir sings a wide range of alternative and contemporary rock and pop songs, from the Beatles to Bowie to Bastille. Launched in September 2017, the choir has performed live at Rickmansworth Festival, Harrow's Heroes, Headstone Manor, and at pubs, bars, venues, and parties in Harrow and Hillingdon.</p>
-<p>Indie Choir meets upstairs at Trinity Bar in central Harrow on Thursday nights, and more details can be found on the web (<a href="https://www.indiechoir.com">indiechoir.com</a>), Facebook (<a href="https://www.facebook.com/indiechoir">@indiechoir</a>) and Instagram (<a href="https://www.instagram.com/indiechoiruk/">@indiechoiruk</a>).</p>
-<p>🕓 2.45pm, 4.15pm, 5.30pm</p>
-<p>📍 Roof Terrace</p>
 </details>
 
 <details>
@@ -184,6 +177,14 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <p>The Hill Players is an ever-growing amateur dramatics group founded in 2007 and based around Harrow on the Hill. We are passionate about community theatre and pride ourselves on putting on great productions, including an annual Christmas Panto at Harrow School's Ryan Theatre. We welcome new members! Please see our website <a href="https://www.hillplayers.co.uk">hillplayers.co.uk</a> for more information.</p>
 <p>🕓 2pm – 6pm, every half hour</p>
 <p>📍 The Old Well, West Street</p>
+</details>
+
+<details>
+<summary>Indie Choir</summary>
+<p>Harrow's very own Indie Choir sings a wide range of alternative and contemporary rock and pop songs, from the Beatles to Bowie to Bastille. Launched in September 2017, the choir has performed live at Rickmansworth Festival, Harrow's Heroes, Headstone Manor, and at pubs, bars, venues, and parties in Harrow and Hillingdon.</p>
+<p>Indie Choir meets upstairs at Trinity Bar in central Harrow on Thursday nights, and more details can be found on the web (<a href="https://www.indiechoir.com">indiechoir.com</a>), Facebook (<a href="https://www.facebook.com/indiechoir">@indiechoir</a>) and Instagram (<a href="https://www.instagram.com/indiechoiruk/">@indiechoiruk</a>).</p>
+<p>🕓 2.45pm, 4.15pm, 5.30pm</p>
+<p>📍 Roof Terrace</p>
 </details>
 
 <details>
@@ -269,8 +270,17 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 </details>
 
 <details>
-<summary>St Mary's</summary>
+<summary>St Mary's and Spire Cafe</summary>
 <p>After listening to the bellringing opening the Community Day why not climb the tower and go onto the flat roof (weather permitting) to see the stunning views of the Hill and London.  Come and meet Elizabeth I and John Lyon, who founded the School and other characters in costume who will tell you some of the history of the School and church. Visit the church where boys worshipped before the chapel was built, including prime ministers Robert Peel and Spencer Percival and authors Lord Byron, Sheridan, and Anthony Trollope. Go on our churchyard trail or have a cuppa at our Spire Cafe.</p>
+<p><ul>
+<li>Homemade soup and fresh rolls</li>
+<li>Hot filled rolls</li>
+<li>Cream teas featuring Spire Cafe's famous scones, fresh from the oven</li>
+<li>Home-baked cakes</li>
+<li>Fairtrade teas and coffees</li>
+<li>Cold drinks including our homemade mango lassi</li>
+</ul></p>
+<p>For updates, find us <a href="https://tinyurl.com/spirecafeharrow">on the web<a> and <a href="https://twitter.com/SpireCafe">on Twitter @SpireCafe.</a></p>
 <p>🕓 2pm – 6pm</p>
 <p>📍 St Mary's</p>
 </details>
@@ -308,7 +318,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 
 <h1 class="green">Road Closures</h1>
 <img src="/450/road_closures.png">
-<p>Road closures will be in place on Saturday 30 April from midnight to midnight.</p>
+<p>Road closures will be in place on Saturday 30 April from 6am to 8pm.</p>
 
 <p>Residents will be issued, in advance, with a car pass to allow them to access the yellow and blue sections at any time during the 24-hour period.</p>
 
@@ -319,3 +329,11 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <p>Public parking is available in the Queen’s House Car Park, Kymberley Road, London, HA1 1US (<a href="https://goo.gl/maps/keAqtqzrvP2NYrpA6">Google Maps</a>/<a href="https://maps.apple.com/?address=104%20College%20Road,%20Harrow,%20HA1%201BQ,%20England&auid=11423917619285009007&ll=51.580760,-0.339339">Apple Maps</a>) and a free shuttle bus from the car park to Davidson Lane will be in operation.</p>
 
 <p>There will be accessibility parking on London Road at the south end of the Hill.</p>
+
+<h1 class="pink">Other Information</h1>
+
+<p><strong>First Aid and Lost Children</strong></p>
+<p>St John’s ambulance will be working from the West St Meeting Room at the top of West St.  This will also be the location to which lost children should be taken.</p>	
+ 
+<p><strong>Security</strong></p>
+<p>Harrow School Security can be contacted via 0208 872 8345 and 07766 688597.</p>
