--- a/450-test/index.html
+++ b/450-test/index.html
@@ -337,3 +337,10 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
  
 <p><strong>Security</strong></p>
 <p>Harrow School Security can be contacted via 0208 872 8345 and 07766 688597.</p>
+
+<h1 class="orange">Map (BETA)</h1>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+<script src="/450-test/map.js"></script>
+
+<div id="map"></div>		
