--- a/450/index.html
+++ b/450/index.html
@@ -189,6 +189,7 @@ permalink: /450
 
 <details>
 <summary>John Lyon School Drama</summary>
+<p>A showcase of material from John Lyon’s upcoming modern interpretation of Shakespeare’s The Tempest, adapted for the Harrow and Hill Community Day.</p>
 <p>🕓 2pm – 2.30pm</p>
 <p>📍 The Park Drive</p>
 </details>
