Added content and link on home page. Adjusted CSS.

--- a/450/index.html
+++ b/450/index.html
@@ -82,6 +82,12 @@ permalink: /450
 
 <details>
 <summary>Art Workshop</summary>
+<p><strong>Queen Elizabeth I and John Lyon Figures</strong></p>
+<p>Our two prestigious life-size figures need your help to decorate them and make them look as glorious as possible! Just drop by, and spend as long or as little as you like.</p>
+<p><strong>Stained-Glass Windows</strong></p>
+<p>Inspired by the John Lyon window, decorate your own historical window to take home and make your windows glow!</p>
+<p><strong>Victorian Photographic Studio</strong></p>
+<p>Thinking of Harrow School in Victorian times, and create your own photo studio... with a difference!</p>
 <p>🕓 2pm – 6pm</p>
 <p>📍 Outside Druries</p>
 </details>
