--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@ layout: default
 ---
 
 <p>Welcome to the website for the Harrow School Computer Science Department.</p>
+
+<p><strong>If you are looking for the Harrow and the Hill Community Day website, please <a href="450">click here</a>.</strong></p>
+
 <p>Use the links below to browse the site:</p>
-<!--Euler 31-->
+
 <ul>
     <li><a href="projects">Summer Projects</a></li>
 </ul>
