Added map and other content

--- a/450/index.html
+++ b/450/index.html
@@ -11,7 +11,12 @@ permalink: /450
 
 <p><strong>Last updated: {{ page.date | date: "%A %-d %B" }}</strong></p>
 
+<h1 class="orange">Map of the Hill</h1>
+<img src="/450/450_map.jpg" width=100% height=auto>
+
 <h1 class="purple">Food Noon to 6pm</h1>
+
+<p>Tap each item for more information.</p>
 
 <details>
 <summary>Food Market</summary>
@@ -55,7 +60,7 @@ permalink: /450
 <p>📍 Opposite Druries</p>
 </details>
 
-<h1 class="orange">Events 2pm – 6pm</h1>
+<h1 class="green">Events 2pm – 6pm</h1>
 
 <p>Tap each item for more information.</p>
 
@@ -323,7 +328,7 @@ permalink: /450
 
 
 
-<h1 class="green">Road Closures</h1>
+<h1 class="orange">Road Closures</h1>
 <img src="/450/road_closures.png">
 <p>Road closures will be in place on Saturday 30 April from 6am to 8pm.</p>
 
@@ -339,8 +344,15 @@ permalink: /450
 
 <h1 class="pink">Other Information</h1>
 
-<p><strong>First Aid and Lost Children</strong></p>
-<p>St John’s ambulance will be working from the West St Meeting Room at the top of West St.  This will also be the location to which lost children should be taken.</p>	
+<p><strong>First Aid and Lost Children</strong><br/>
+St John’s ambulance will be working from the West St Meeting Room at the top of West St.  This will also be the location to which lost children should be taken.</p>	
  
-<p><strong>Security</strong></p>
-<p>Harrow School Security can be contacted via 0208 872 8345 and 07766 688597.</p>
+<p><strong>Security</strong><br/>
+Harrow School Security can be contacted via 0208 872 8345 and 07766 688597.</p>
+
+<p><strong>Picnic Places</strong><br/>
+You are welcome to picnic in the gardens below the Chapel Terrace, on the Roof Terrace and on The Green by the Band Stand.</p>
+ 
+<p><strong>Toilets</strong><br/>
+Porta Loos can be found in Grove Hill and Harrow Park.</p>
+
