Added PDFs for exhibitions

--- a/450/index.html
+++ b/450/index.html
@@ -81,6 +81,7 @@ permalink: /450
 <details>
 <summary>Art, Photography and Sculpture Exhibitions</summary>
 <p>Work by local schools and adult art groups</p>
+<p>See here for more information on how to enter the <a href="/450/Photography Competition Poster.pdf">photography competition</a> or the <a href="/450/Harrow Community Art Exhibition.pdf">art exhibition</a>.
 <p>🕓 2pm – 6pm</p>
 <p>📍 Pasmore Gallery and Grove Hill</p>
 </details>
@@ -355,4 +356,3 @@ You are welcome to picnic in the gardens below the Chapel Terrace, on the Roof T
  
 <p><strong>Toilets</strong><br/>
 Porta Loos can be found in Grove Hill and Harrow Park.</p>
-
