--- a/450/index.html
+++ b/450/index.html
@@ -54,6 +54,28 @@ permalink: /450
 </details>
 
 <details>
+<summary>The Pie Stall</summary>
+<p>We will be selling delicious pies from across the centuries, both savoury and sweet. Come and select a filling of your choice! Proceeds from sales will be donated to Paws for Cause.</p>
+<p>🕓 noon – 6pm</p>
+<p>📍 Bill Yard</p>
+</details>
+
+<details>
+<summary>Spire Cafe</summary>
+<p><ul>
+<li>Homemade soup and fresh rolls</li>
+<li>Hot filled rolls</li>
+<li>Cream teas featuring Spire Cafe's famous scones, fresh from the oven</li>
+<li>Home-baked cakes</li>
+<li>Fairtrade teas and coffees</li>
+<li>Cold drinks including our homemade mango lassi</li>
+</ul></p>
+<p>For updates, find us <a href="https://tinyurl.com/spirecafeharrow">on the web</a> and <a href="https://twitter.com/SpireCafe">on Twitter @SpireCafe.</a></p>
+<p>🕓 noon – 6pm</p>
+<p>📍 St Mary's Church</p>
+</details>
+
+<details>
 <summary>WI Cake Stall</summary>
 <p>A selection of wonderful home-made cakes for sale.</p>
 <p>🕓 noon – 6pm</p>
@@ -99,14 +121,22 @@ permalink: /450
 </details>
 
 <details>
+<summary>Athletics</summary>
+<p>Harrow School and Harrow Athletics Club will combine to compete in an afternoon of athletics. This festival will see 48 Harrow athletes compete against Harrow AC in a refined range of events, highlighting the key disciplines within the sport and strengthening the connection between the school and local community.</p>
+<p>🕓 2.15pm – 4.45pm</p>
+<p>📍 Athletics Ground</p>
+</details>
+
+<details>
 <summary>Barefoot Dance</summary>
 <p>🕓 2.45pm, 4.15pm</p>
 <p>📍 War Memorial Building Forecourt</p>
 </details>
 
 <details>
-<summary>Basketball Competition</summary>
-<p>🕓 2pm – 6pm</p>
+<summary>Basketball</summary>
+<p>Harrow school and the local community Basketball clubs will play a 3 vs 3 competition in the Harrow school sports hall, culminating in a final between the top two teams. Following this, Harrow schools current senior first team will play a recent leavers OH team in an exciting exhibition match.</p>
+<p>🕓 2pm – 4.30pm</p>
 <p>📍 Sports Hall</p>
 </details>
 
@@ -126,7 +156,7 @@ permalink: /450
 <summary>Community Production: Noye's Fludde</summary>
 <p>A flood is coming, but Noah is building a boat, in the hope that a new world will be waiting on the other side.</p>
 <p>As part of Harrow School's Community Day, members of the Drama and Music departments direct a joyous new production of Benjamin Britten's community opera, combining the talents of more than a hundred children from four primary schools: Byron Court, Norbury, St Anselm's and St Jerome's from across the borough, and Bishopshalt School.</p>
-<p>🕓 2pm, 5pm</p>
+<p>🕓 2pm and 5pm</p>
 <p>📍 Speech Room</p>
 </details>
 
@@ -147,16 +177,15 @@ permalink: /450
 <details>
 <summary>Edwardian Harrow Beak Reads Virgil</summary>
 <p>🕓 2.40pm – 3pm</p>
-<p>📍 The Park Drive</p>
+<p>📍 The Park Driveway</p>
 </details>
 
 <details>
-<summary>Exhibition of Traditional Games</summary>
-<p>Including Squash – which was invented at Harrow – Fives, Rackets, Judo and Archery</p>
-<p>🕓 2pm – 6pm</p>
-<p>📍 Sports Hall</p>
+<summary>Fives</summary>
+<p>On the main fives courts, initial celebrations will start with an exciting exhibition match between the top seeded players in the school. On the others courts, highly qualified coaches and some senior boys will run a taster session for all those who wish to trial the game. The afternoon will then conclude with a festival style tournament between the Harrow boys and some community players.</p>
+<p>🕓 2pm – 4pm</p>
+<p>📍 Hundred Steps</p>
 </details>
-
 
 <details>
 <summary>Harrow Community Gospel Choir</summary>
@@ -180,7 +209,7 @@ permalink: /450
 <p>We are very proud of our Alumni, many of whom still perform and help voluntarily within the band, our trustees include ex band members and their parents. Others have gone on to be teachers, leaders of arts organisations and practising musicians.</p> <p>Our funders include: John Lyon's Charity, Harrow Giving, and the Young Harrow Foundation.</p> 
 <p>Please get in touch for further info: <a href="mailto:bandmanager@harrowsteel.org.uk">bandmanager@harrowsteel.org.uk</a></p>
 <p>🕓 2pm, 3.45pm, 5pm</p>
-<p>📍 Roof Terrace</p>
+<p>📍 Roof Terrace behind Medical Centre</p>
 </details>
 
 <details>
@@ -196,14 +225,21 @@ permalink: /450
 <p>Harrow's very own Indie Choir sings a wide range of alternative and contemporary rock and pop songs, from the Beatles to Bowie to Bastille. Launched in September 2017, the choir has performed live at Rickmansworth Festival, Harrow's Heroes, Headstone Manor, and at pubs, bars, venues, and parties in Harrow and Hillingdon.</p>
 <p>Indie Choir meets upstairs at Trinity Bar in central Harrow on Thursday nights, and more details can be found on the web (<a href="https://www.indiechoir.com">indiechoir.com</a>), Facebook (<a href="https://www.facebook.com/indiechoir">@indiechoir</a>) and Instagram (<a href="https://www.instagram.com/indiechoiruk/">@indiechoiruk</a>).</p>
 <p>🕓 2.45pm, 4.15pm, 5.30pm</p>
-<p>📍 Roof Terrace</p>
+<p>📍 Roof Terrace behind Medical Centre</p>
 </details>
 
 <details>
 <summary>John Lyon School Drama</summary>
 <p>A showcase of material from John Lyon’s upcoming modern interpretation of Shakespeare’s The Tempest, adapted for the Harrow and Hill Community Day.</p>
 <p>🕓 2pm – 2.30pm</p>
-<p>📍 The Park Drive</p>
+<p>📍 The Park Driveway</p>
+</details>
+
+<details>
+<summary>Judo</summary>
+<p>The judo celebrations will begin with an exhibition training session at 2pm. Boys will demonstrate the main elements of judo training, including traditional warm-up and agility exercises, breakfalls, uchi-komi (technical drills) for standing and groundwork, contest technique, and randori (sparring). The session will conclude with some inter-house exhibition contests. At 3:30pm there will then be an expert demonstration of Nage-no-kata, which is one of the main katas (formal demonstrations) of Kodokan Judo. It is intended as an illustration of the various concepts of throwing that exist in judo and is used both as a training method and as a demonstration of understanding. From 4-5pm there will be a taster session for anyone who would like to try judo.</p>
+<p>🕓 2pm – 5pm</p>
+<p>📍 Hundred Steps</p>
 </details>
 
 <details>
@@ -262,6 +298,13 @@ permalink: /450
 </details>
 
 <details>
+<summary>Rackets</summary>
+<p>On the main rackets court there will be an exciting exhibition match between the top seeded players in the school. On the second court, highly qualified coaches will run a taster session for all those who wish to trial the game and gain experience of the pace of the ball and play. All are welcome and kit and equipment will be provided.</p>
+<p>🕓 2.15pm – 4.30pm</p>
+<p>📍 Hundred Steps</p>
+</details>
+
+<details>
 <summary>Rayleigh Observatory</summary>
 <p>Find out about the observation of planets, galaxies and other astronomical phenomena.</p>
 <p>🕓 2pm – 6pm</p>
@@ -272,7 +315,14 @@ permalink: /450
 <summary>Roystonjax</summary>
 <p>RoystonJax are a trio with a difference. They use stripped down to bass/drum backing tracks and play live guitars with fabulous three-part harmonies. It feels like a full band but one that can play at any volume in any venue!</p>
 <p>🕓 3.15pm, 5.30pm</p>
-<p>📍 Roof Terrace</p>
+<p>📍 Roof Terrace behind Medical Centre</p>
+</details>
+
+<details>
+<summary>Squash</summary>
+<p> A sport invented at Harrow School, this squash event will feature exhibition matches between the School’s first and second seed (former number 1 in Asia U16 and current top 40 U18 UK), and members of the Harrow Leisure Centre Squash Club. On the second glass back court, the captain and vice captain (Ilyas Qureshi and Hanno Sie) will offer a taster session and training for all that wish to come and take part.</p>
+<p>🕓 1pm – 4pm</p>
+<p>📍 Hundred Steps</p>
 </details>
 
 <details>
@@ -283,25 +333,16 @@ permalink: /450
 </details>
 
 <details>
-<summary>St Mary's and Spire Cafe</summary>
+<summary>St Mary's Church</summary>
 <p>After listening to the bellringing opening the Community Day why not climb the tower and go onto the flat roof (weather permitting) to see the stunning views of the Hill and London.  Come and meet Elizabeth I and John Lyon, who founded the School and other characters in costume who will tell you some of the history of the School and church. Visit the church where boys worshipped before the chapel was built, including prime ministers Robert Peel and Spencer Percival and authors Lord Byron, Sheridan, and Anthony Trollope. Go on our churchyard trail or have a cuppa at our Spire Cafe.</p>
-<p><ul>
-<li>Homemade soup and fresh rolls</li>
-<li>Hot filled rolls</li>
-<li>Cream teas featuring Spire Cafe's famous scones, fresh from the oven</li>
-<li>Home-baked cakes</li>
-<li>Fairtrade teas and coffees</li>
-<li>Cold drinks including our homemade mango lassi</li>
-</ul></p>
-<p>For updates, find us <a href="https://tinyurl.com/spirecafeharrow">on the web<a> and <a href="https://twitter.com/SpireCafe">on Twitter @SpireCafe.</a></p>
 <p>🕓 2pm – 6pm</p>
-<p>📍 St Mary's</p>
+<p>📍 St Mary's Church</p>
 </details>
 
 <details>
 <summary>String Quartet and Brass Trio</summary>
 <p>🕓 3.30pm – 4.30pm</p>
-<p>📍 The Park Drive</p>
+<p>📍 The Park Driveway</p>
 </details>
 
 <details>
@@ -352,7 +393,7 @@ St John’s ambulance will be working from the West St Meeting Room at the top o
 Harrow School Security can be contacted via 0208 872 8345 and 07766 688597.</p>
 
 <p><strong>Picnic Places</strong><br/>
-You are welcome to picnic in the gardens below the Chapel Terrace, on the Roof Terrace and on The Green by the Band Stand.</p>
+You are welcome to picnic in the gardens below the Chapel Terrace, on the Roof Terrace behind the Medical Centre and on The Green by the Band Stand.</p>
  
 <p><strong>Toilets</strong><br/>
 Porta Loos can be found in Grove Hill and Harrow Park.</p>
