changed where files are looked for

--- a/450-test/index.html
+++ b/450-test/index.html
@@ -13,7 +13,7 @@
   <title>Harrow and the Hill Community Day</title>
 
   <!-- Import Special CSS -->
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="./index.css">
 
   <!-- Import Leaflet.js for map-->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -151,7 +151,7 @@
   </main>
 
   <!-- Import Special JS -->
-  <script src="/index.js"></script>
+  <script src="./index.js"></script>
 
   <footer>
     &copy; Harrow School 2022
