--- a/450-test/index.html
+++ b/450-test/index.html
@@ -43,7 +43,7 @@
 <body>
   <main id="app">
 
-    <img src="/assets/logo.png" width=100% height=auto class="py-2">
+    <img src="./assets/logo.png" width=100% height=auto class="py-2">
     <section>
 
       <h1 class="pink">Celebrating 450 years of community on the Hill</h1>
@@ -93,7 +93,7 @@
       </details>
 
       <h1 class="green">Road Closures</h1>
-      <img src="/assets/road_closures.png">
+      <img src="./assets/road_closures.png">
       <p>Road closures will be in place on Saturday 30 April from 6am to 8pm.</p>
 
       <p>Residents will be issued, in advance, with a car pass to allow them to access the yellow and blue sections at
