added favicon for page

--- a/450-test/index.html
+++ b/450-test/index.html
@@ -3,11 +3,14 @@
 
 <head>
 
-  <!-- Meta Tags->
+  <!-- Meta Tags -->
   <meta charset="utf-8">
   <meta name="robots" content="noindex,follow" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="refresh" content="300">
+
+  <!-- favicon -->
+  <link rel="shortcut icon" href="favicon.png">
 
   <!-- Title Tag -->
   <title>Harrow and the Hill Community Day</title>
