'github' has a capital G

--- a/450-test/index.html
+++ b/450-test/index.html
@@ -172,7 +172,7 @@
               </tbody>
             </table>
             
-            <a type="button" role="button" :href="state.latestcommit.parents[0].html_url" class="btn btn-outline-info">View on github</a>
+            <a type="button" role="button" :href="state.latestcommit.parents[0].html_url" class="btn btn-outline-info">View on Github</a>
 
           </div>
 
