--- a/450-test/index.html
+++ b/450-test/index.html
@@ -79,7 +79,7 @@
 
       <p>Tap each item for more information.</p>
 
-      <details v-for="event in events" v-if="event.classification == 'Events' ">
+      <details v-for="event in events" v-if="event.classification == 'Event' ">
         <summary>{{event.title}}</summary>
         <span v-html="event.body"></span>
         <p>🕓 {{event.times}}</p>
@@ -88,7 +88,7 @@
         <p>📍 {{locations[event.location].title}}
           <button type="button" class="btn btn-danger btn-sm pl-2" data-bs-toggle="modal"
             :data-bs-locationid="event.location"
-            :data-bs-target="'#locationModal'+event.location">{{locations[event.location].title}}</button>
+            :data-bs-target="'#locationModal'+event.location">Find</button>
         </p>
 
         <!-- Button trigger modal -->
