road closures map

--- a/450-test/index.html
+++ b/450-test/index.html
@@ -100,7 +100,7 @@
         </details>
 
         <h3 class="green">Road Closures</h3>
-        <img src="/450/road_closures.png">
+        <img src="./assets/road_closures.png">
         <p>Road closures will be in place on Saturday 30 April from 6am to 8pm.</p>
 
         <p>Residents will be issued, in advance, with a car pass to allow them to access the yellow and blue sections at
